--- a/MEDIA_QUERIE/index.html
+++ b/MEDIA_QUERIE/index.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>MEDIA QUERIE</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>MEDIA QUERIE</title>
+    </head>
+    <body>
+        <header>
+            <div class="title">Tres Grandes Cuadros</div>
+            <div class="nav">
+                <nav>Gioconda</nav>
+                <nav>Girasoles</nav>
+                <nav>El Suicidio</nav>
+
+            </div>
+        </header>
+        <div class="container">
+            <div class="pintura">
+                <div class="img-1"></div>
+                <div class="description">
+
+                    <div class="paint-detail">
+                        <div class="paint-title">
+                            La Gioconda
+                        </div>
+                        <div class="paint-artist">
+                            Leonardo Da Vinci
+                        </div>
+                    </div>
+                    <div class="description-text">Lorem ipsum dolor sit amet
+                        consectetur
+                        adipisicing elit. Unde accusamus excepturi rem sed
+                        itaque,
+                        illo earum molestiae dolorum iure velit blanditiis, eum
+                        exercitationem! Recusandae hic in facere dicta unde
+                        voluptates.
+                        Magnam similique non, excepturi, iusto id labore
+                        deleniti
+                        dolorem nulla at illum itaque dolor dicta voluptatum
+                        unde
+                        expedita eligendi debitis praesentium ex porro suscipit,
+                        provident eaque! Perspiciatis architecto esse
+                        officia?</div>
+                </d>
+            </div>
+           
+        </div>
+        <main></main>
+        <footer></footer>
+    </body>
 </html>
