--- a/MEDIA_QUERIE/index.html
+++ b/MEDIA_QUERIE/index.html
@@ -26,7 +26,7 @@
                             La Gioconda
                         </div>
                         <div class="paint-artist">
-                            Leonardo Da Vinci
+                            Leonardo Da Vinci - 1519
                         </div>
                     </div>
                     <div class="description-text">Lorem ipsum dolor sit amet
@@ -43,7 +43,63 @@
                         expedita eligendi debitis praesentium ex porro suscipit,
                         provident eaque! Perspiciatis architecto esse
                         officia?</div>
-                </d>
+                </div>
+            </div>
+            <div class="pintura-2">
+                <div class="img-2"></div>
+                <div class="description">
+
+                    <div class="paint-detail">
+                        <div class="paint-title">
+                            Los girasoles
+                        </div>
+                        <div class="paint-artist">
+                            Ludwig Van Gogh - 1888
+                        </div>
+                    </div>
+                    <div class="description-text">Lorem ipsum dolor sit amet
+                        consectetur
+                        adipisicing elit. Unde accusamus excepturi rem sed
+                        itaque,
+                        illo earum molestiae dolorum iure velit blanditiis, eum
+                        exercitationem! Recusandae hic in facere dicta unde
+                        voluptates.
+                        Magnam similique non, excepturi, iusto id labore
+                        deleniti
+                        dolorem nulla at illum itaque dolor dicta voluptatum
+                        unde
+                        expedita eligendi debitis praesentium ex porro suscipit,
+                        provident eaque! Perspiciatis architecto esse
+                        officia?</div>
+                </div>
+            </div>
+            <div class="pintura">
+                <div class="img-3"></div>
+                <div class="description">
+
+                    <div class="paint-detail">
+                        <div class="paint-title">
+                            El Suicidio
+                        </div>
+                        <div class="paint-artist">
+                            Édouard Manet - 1881
+                        </div>
+                    </div>
+                    <div class="description-text">Lorem ipsum dolor sit amet
+                        consectetur
+                        adipisicing elit. Unde accusamus excepturi rem sed
+                        itaque,
+                        illo earum molestiae dolorum iure velit blanditiis, eum
+                        exercitationem! Recusandae hic in facere dicta unde
+                        voluptates.
+                        Magnam similique non, excepturi, iusto id labore
+                        deleniti
+                        dolorem nulla at illum itaque dolor dicta voluptatum
+                        unde
+                        expedita eligendi debitis praesentium ex porro suscipit,
+                        provident eaque! Perspiciatis architecto esse
+                        officia?</div>
+                </div>
             </div>
            
         </div>
