--- a/MEDIA_QUERIE/index.html
+++ b/MEDIA_QUERIE/index.html
@@ -10,14 +10,14 @@
         <header>
             <div class="title">Tres Grandes Cuadros</div>
             <div class="nav">
-                <nav>Gioconda</nav>
-                <nav>Girasoles</nav>
-                <nav>El Suicidio</nav>
+                <nav><a href="#gioconda">Gioconda </a></nav>
+                <nav><a href="#girasoles">Girasoles</a> </nav>
+                <nav><a href="#suicidio">El Suicidio</a></nav>
 
             </div>
         </header>
         <div class="container">
-            <div class="pintura">
+            <div id="gioconda" class="pintura" >
                 <div class="img-1"></div>
                 <div class="description">
 
@@ -45,7 +45,7 @@
                         officia?</div>
                 </div>
             </div>
-            <div class="pintura-2">
+            <div id="girasoles" class="pintura-2" >
                 <div class="img-2"></div>
                 <div class="description">
 
@@ -73,7 +73,7 @@
                         officia?</div>
                 </div>
             </div>
-            <div class="pintura">
+            <div id="suicidio" class="pintura" >
                 <div class="img-3"></div>
                 <div class="description">
 
