--- a/BOOTSTRAP_SLIDER_RESPONSIVE/index.html
+++ b/BOOTSTRAP_SLIDER_RESPONSIVE/index.html
@@ -52,7 +52,7 @@
                                 <div class="carousel-item active"
                                     data-bs-interval="10000">
                                     <img src="img/casa-curutchet.webp"
-                                        class="d-block w-100" alt="..." >
+                                        class="d-block w-100" alt="...">
                                     <div
                                         class="carousel-caption d-none d-md-block">
                                         <h5 id="carrousel-text">"Casa Curuchet"
@@ -107,7 +107,7 @@
                                             UNIDOS- </h5>
                                         <p id="carrousel-text">Frank Lloyd
                                             Wright (Estados
-                                            Unidos</p>
+                                            Unidos)</p>
                                     </div>
                                 </div>
                             </div>
@@ -148,7 +148,8 @@
                                     the card's content.</p>
                                 <a
                                     href=https://www.google.com/maps/place/Casa+Curutchet,+Av.+53+320,+B1900BAU+La+Plata,+Provincia+de+Buenos+Aires,+Argentina/@-34.911301,-57.9416041,19z/data=!4m14!1m7!3m6!1s0x95a2e63e86517f97:0x15e61d9fed078f7e!2sCasa+Curutchet,+Av.+53+320,+B1900BAU+La+Plata,+Provincia+de+Buenos+Aires,+Argentina!8m2!3d-34.9113512!4d-57.9417488!16s%2Fm%2F01xmg40!3m5!1s0x95a2e63e86517f97:0x15e61d9fed078f7e!8m2!3d-34.9113512!4d-57.9417488!16s%2Fm%2F01xmg40"
-                                    class="btn btn-primary" target="_blank">Ver en Google
+                                    class="btn btn-primary" target="_blank">Ver
+                                    en Google
                                     Maps</a>
                             </div>
                         </div>
@@ -163,14 +164,16 @@
                                 alt="...">
 
                             <div class="card-body" id="arrollo">
-                                <h5 class="card-title">Casa sobre el Arrollo</h5>
+                                <h5 class="card-title">Casa sobre el
+                                    Arrollo</h5>
                                 <p class="card-text">Some quick example text to
                                     build on the card title and make up the bulk
                                     of
                                     the card's content.</p>
                                 <a
                                     href=https://www.google.com/maps/place/CASA+SOBRE+EL+ARROYO+Museo+Casa+del+Puente,+Quintana+3998,+B7602+Mar+del+Plata,+Provincia+de+Buenos+Aires,+Argentina/@-38.0082527,-57.5738944,17z/data=!4m6!3m5!1s0x9584dfbf5b633b73:0x9603db2aa918138c!8m2!3d-38.0082527!4d-57.5738944!16s%2Fg%2F11x7vtv83"
-                                    class="btn btn-primary" target="_blank">Ver en Google
+                                    class="btn btn-primary" target="_blank">Ver
+                                    en Google
                                     Maps</a>
                             </div>
                         </div>
@@ -191,8 +194,9 @@
                                     of
                                     the card's content.</p>
                                 <a
-                                    href=https://www.google.com/maps/place/Edith+Farnsworth+House,+14520+River+Rd,+Plano,+IL+60545,+Estados+Unidos/@41.6350276,-88.5356838,17z/data=!4m6!3m5!1s0x880ec11ee9030729:0xb7ce648588ec297e!8m2!3d41.6350276!4d-88.5356838!16zL20vMDNfcWRo3"
-                                    class="btn btn-primary" target="_blank">Ver en Google
+                                    href="https://www.google.com/maps/place/Edith+Farnsworth+House/@41.6350316,-88.5382587,17z/data=!3m1!4b1!4m6!3m5!1s0x880ec11ee9030729:0xb7ce648588ec297e!8m2!3d41.6350276!4d-88.5356838!16zL20vMDNfcWRo?entry=ttu"
+                                    class="btn btn-primary" target="_blank">Ver
+                                    en Google
                                     Maps</a>
                             </div>
                         </div>
@@ -207,14 +211,15 @@
                                 alt="...">
 
                             <div class="card-body" id="arrollo">
-                                <h5 class="card-title">Casa Kaufmann/h5>
+                                <h5 class="card-title">Casa Kaufmann</h5>
                                 <p class="card-text">Some quick example text to
                                     build on the card title and make up the bulk
                                     of
                                     the card's content.</p>
                                 <a
-                                    href=https://www.google.com/maps/place/Casa+de+la+Cascada,+1491+Mill+Run+Rd,+Mill+Run,+PA+15464,+Estados+Unidos/@39.9062551,-79.4678413,17z/data=!4m6!3m5!1s0x883533f74d79e731:0x6e162bd3790a9ab8!8m2!3d39.9062551!4d-79.4678413!16zL20vMDF6aDJz"
-                                    class="btn btn-primary" target="_blank">Ver en Google
+                                    href="https://www.google.com/maps/place/Casa+de+la+Cascada,+1491+Mill+Run+Rd,+Mill+Run,+PA+15464,+Estados+Unidos/@39.9062551,-79.4678413,17z/data=!4m6!3m5!1s0x883533f74d79e731:0x6e162bd3790a9ab8!8m2!3d39.9062551!4d-79.4678413!16zL20vMDF6aDJz"
+                                    class="btn btn-primary" target="_blank">Ver
+                                    en Google
                                     Maps</a>
                             </div>
                         </div>
